Fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -78,6 +78,7 @@ button:focus-visible {
 
 main {
   display: flex;
+  justify-content: space-between;
   width: 200px;
 }
 
